# SpikeballRobot

./: CMakeLists.txt
collision_demo/: simviz_demo.cpp
model/spikeball/meshes/collisions/: net-i-hope.mtl
model/spikeball/meshes/visual/: ball-take3.mtl  i-hope-this-is-a-net.mtl  oldball-take3.mtl
model/test_objects/meshes/visual/: ground.mtl
project_starter_code/: controller.cpp
spikeball_project/: CMakeLists.txt  aubrey.cpp  ball.urdf  ballDetection.cpp  ballDetection.h  controller_merge_fml.cpp  controller_sb.cpp  controller_sb_no_grav.cpp  controller_sb_posori.cpp  controller_sb_sam.cpp  controller_sb_trial.cpp  controller_william.cpp  kristina.cpp  panda_spikeball.urdf  panda_spikeball_team1.urdf  panda_spikeball_team2.urdf  sam.cpp  simviz_no_grav.cpp  simviz_posori.cpp  simviz_sb.cpp  simviz_william.cpp  world.urdf  world_no_grav.urdf  world_posori.urdf
